<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <android.support.v7.widget.CardView
        android:id="@+id/card_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/letter_medium"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        card_view:contentPaddingBottom="@dimen/spacing_large"
        card_view:contentPaddingLeft="@dimen/spacing_xmedium"
        card_view:contentPaddingRight="@dimen/spacing_xmedium"
        card_view:contentPaddingTop="@dimen/spacing_large"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_input_number_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/MyErrorTextAddCard"
            >
          <android.support.design.widget.TextInputEditText
              android:id="@+id/input_number_card"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_number_card"
              android:inputType="phone"
              android:maxLength="19"
              />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            >

          <android.support.design.widget.TextInputLayout
              android:id="@+id/container_input_month"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/spacing_small"
              android:layout_marginRight="@dimen/spacing_small"
              android:layout_weight="2"
              >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_month"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textSize="@dimen/letter_medium"
                />
          </android.support.design.widget.TextInputLayout>


          <android.support.design.widget.TextInputLayout
              android:id="@+id/container_input_year"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/spacing_small"
              android:layout_marginLeft="@dimen/spacing_small"
              android:layout_marginRight="@dimen/spacing_small"
              android:layout_marginStart="@dimen/spacing_small"
              android:layout_weight="2"
              >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_year"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textSize="@dimen/letter_medium"
                />
          </android.support.design.widget.TextInputLayout>


          <android.support.design.widget.TextInputLayout
              android:id="@+id/container_input_ccv"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/spacing_small"
              android:layout_marginStart="@dimen/spacing_small"
              android:layout_weight="3"
              >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_ccv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ccv"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:textSize="@dimen/letter_medium"
                />
          </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/label_error_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_xmedium"
            android:layout_marginLeft="@dimen/spacing_xmedium"
            android:layout_marginRight="@dimen/spacing_xmedium"
            android:layout_marginStart="@dimen/spacing_xmedium"
            android:text="@string/message_cvv_empty"
            android:textAppearance="@style/MyErrorTextAddCard"
            android:textColor="@color/primary"
            android:visibility="gone"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_add_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/letter_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/letter_medium"
        android:padding="@dimen/spacing_xlarge"
        android:text="@string/btn_add_payment"
        android:textColor="@color/primary_text_white"
        />


  </LinearLayout>

</android.support.v4.widget.NestedScrollView>
